kuber/kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: go-project
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.4.0
          ports:
            - containerPort: 9092
            - containerPort: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: go-project
spec:
  selector:
    app: kafka
  ports:
    - name: kafka-client
      port: 9092
      targetPort: 9092
    - name: kafka-internal
      port: 29092
      targetPort: 29092
  clusterIP: None
