kuber/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: go-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.3.1
          args: ["start-dev"]
          resources:
            requests:
              cpu: "0.25"
              memory: "512Mi"
            limits:
              cpu: "0.5"
              memory: "1024Mi"
          ports:
            - containerPort: 8080
            - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: go-project
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
