kuber/post-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
  namespace: go-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service
          image: sayansayan123/go-project-post-service:1.0
          ports:
            - containerPort: 8089
          resources:
            requests:
              cpu: "700m"
              memory: "256Mi"
            limits:
              cpu: "1200m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: go-project
spec:
  type: NodePort

  selector:
    app: post-service
  ports:
    - port: 8089
      targetPort: 8089
      nodePort: 30089
