kuber/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: go-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          args:
            - redis-server
            - "--appendonly yes"
            - "--save 60 10"
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: redis-data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: go-project
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
